// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.integration.templates.bugle;

import "src/com/google/android/as/oss/dataattribution/proto/attribution_chip_header.proto";
import "src/com/google/android/as/oss/dataattribution/proto/attribution_dialog.proto";
import "src/com/google/android/as/oss/delegatedui/api/integration/templates/ui_id_token.proto";

option java_package = "com.google.android.as.oss.delegatedui.api.integration.templates.bugle";
option java_multiple_files = true;

message BugleTemplateData {
  repeated BugleAction bugle_actions = 1;
  repeated BugleSuggestion bugle_suggestions = 2;
  bool is_standalone_row_enabled = 3;

  // Mapping between PendingIntent and attribution index.
  // The size of this list should match the size of the PendingIntent list
  // within the response. The attribution index is used to locate the
  // corresponding attribution card data within the attribution dialog. This
  // index is implicit, determined by the order of BugleSuggestion items and
  // AttributionDialogData.AttributionCardData.
  repeated int32 pending_intent_to_attribution_map = 4;
  bool enable_size_animation = 5;
}

message BugleAdditionalData {}

message BugleAction {
  reserved 2, 3;
  ActionData action_data = 1;
  bool contains_query = 4;
}

message ActionData {
  string title = 1;
  string description = 2;
  string query = 3;
  // TODO: populate this UiIdToken.
  UiIdToken ui_id_token = 4;
  dataattribution.proto.AttributionDialogData attribution_dialog_data = 5;
  dataattribution.proto.AttributionChipData attribution_chip_data = 6;
}

message BugleSuggestion {
  string text = 1;
  string attribution = 2;
  string content_description = 3;
  // TODO: populate this UiIdToken.
  UiIdToken ui_id_token = 4;
  dataattribution.proto.AttributionDialogData attribution_dialog_data = 5;
}
